--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -366,31 +366,13 @@
                     </div>
                   </div>
                   <div class="message-body" sec:authorize="isAuthenticated()">
-                    <a href="page-user-profile.html" class="py-8 px-7 mt-8 d-flex align-items-center">
+                    <a href="#" class="py-8 px-7 mt-8 d-flex align-items-center">
                             <span class="d-flex align-items-center justify-content-center bg-light rounded-1 p-6">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-account.svg" alt="" width="24" height="24">
+                              <img th:src="@{../../../../../../images/svgs/icon-account.svg}" alt="" width="24" height="24">
                             </span>
                       <div class="w-75 d-inline-block v-middle ps-3">
                         <h6 class="mb-1 bg-hover-primary fw-semibold"> My Profile </h6>
                         <span class="d-block text-dark">Account Settings</span>
-                      </div>
-                    </a>
-                    <a href="app-email.html" class="py-8 px-7 d-flex align-items-center">
-                            <span class="d-flex align-items-center justify-content-center bg-light rounded-1 p-6">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-inbox.svg" alt="" width="24" height="24">
-                            </span>
-                      <div class="w-75 d-inline-block v-middle ps-3">
-                        <h6 class="mb-1 bg-hover-primary fw-semibold">My Inbox</h6>
-                        <span class="d-block text-dark">Messages & Emails</span>
-                      </div>
-                    </a>
-                    <a href="app-notes.html" class="py-8 px-7 d-flex align-items-center">
-                            <span class="d-flex align-items-center justify-content-center bg-light rounded-1 p-6">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-tasks.svg" alt="" width="24" height="24">
-                            </span>
-                      <div class="w-75 d-inline-block v-middle ps-3">
-                        <h6 class="mb-1 bg-hover-primary fw-semibold">My Task</h6>
-                        <span class="d-block text-dark">To-do and Daily Tasks</span>
                       </div>
                     </a>
                   </div>
@@ -466,6 +448,27 @@
             aria-label="Close">
     </button>
     <span th:text="${error}"></span>
+  </div>
+
+  <div th:fragment="userAndMemberButtons">
+    <div class="row" sec:authorize="hasAnyAuthority('USER', 'MEMBER')">
+      <div class="col text-end d-flex justify-content-end mt-3 mt-md-0">
+        <form class="me-3" th:object="${massMember}" th:action="@{'/mass/' + ${session.mass.url} + '/member/' + ${session.user.id} + '/request'}" method="post">
+          <button type="submit" class="btn waves-effect waves-light btn-primary w-100">
+            <i class="ti ti-user-share mx-2"></i> Send Member Request
+          </button>
+        </form>
+        <a th:href="@{/mass/{url}/meal (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-3">
+          <i class="ti ti-checkup-list text-white me-1 fs-5"></i> All Meal List
+        </a>
+        <a th:href="@{/mass/{url}/meal/date (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-7">
+          <i class="ti ti-calendar-stats text-white me-1 fs-5"></i> Meal Date List
+        </a>
+        <a th:href="@{/mass/{url}/meal/date/member (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-7">
+          <i class="ti ti-brand-deliveroo text-white me-1 fs-5"></i> Meal Taken List
+        </a>
+      </div>
+    </div>
   </div>
 
 
