--- a/src/main/resources/templates/meals.html
+++ b/src/main/resources/templates/meals.html
@@ -63,6 +63,7 @@
                         </a>
                     </div>
                 </div>
+                <div th:replace="fragment :: userAndMemberButtons"></div>
             </div>
         </div>
         <div class="mx-lg-9 mx-md-9 mx-xl-9 mx-xxl-9">
