--- a/src/main/resources/templates/member_meal.html
+++ b/src/main/resources/templates/member_meal.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="row" sec:authorize="hasAnyAuthority('USER', 'MEMBER')">
                     <div class="col text-end d-flex justify-content-end mt-3 mt-md-0">
-                        <form class="me-3" th:object="${massMember}" th:action="@{'/mass/' + ${session.mass.url} + '/member/' + ${session.user.id} + '/request'}" method="post">
+                        <form class="me-3" th:object="${massMember}" th:action="@{'/mass/' + ${session.mass.url} + '/member/request'}" method="post">
                             <button type="submit" class="btn waves-effect waves-light btn-primary w-100">
                                 <i class="ti ti-user-share mx-2"></i> Send Member Request
                             </button>
